--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,28 @@
+/* 소제목 */
 #subtitle{
+    font-size: 30px;
     text-align: center;
+    margin-top: 4%;
+    margin-bottom: 0%;
+}
+
+/* 제목 */
+#title{
+    font-size: 90px;
+    text-align: center;
+    margin-top: 0%;
+
+}
+
+/* 크기 조절 시 맞추기 */
+
+/* 크기가 작은 컴퓨터들과 휴대폰을 위한 사이즈 */
+@media  screen and (max-width: 725px){
+    #subtitle{
+        font-size: 20px;
+    }
+
+    #title{
+        font-size: 60px;
+    }
 }
