--- a/CSS/main.css
+++ b/CSS/main.css
@@ -23,6 +23,7 @@ a{
 
 /* 소제목 */
 #subtitle{
+    display: none;
     font-size: 50px;
     font-family: 'ZenLoop_Regular';
     text-align: center;
@@ -32,6 +33,7 @@ a{
 
 /* 제목 */
 #title{
+    display: none;
     font-size: 200px;
     font-family: 'YanoneKaffeesatz_Bold';
     text-align: center;
@@ -41,6 +43,7 @@ a{
 
 /* 메뉴바 */
 #menubar {
+    display: none;
     margin: 0;
     padding: 0;
 }
@@ -70,8 +73,8 @@ a{
 }
 
 #mainProfile{
-    display: none;
-    top: 50px;
+    position: relative;
+    animation: fadeInUp 1s;
     width: 650px;
     height: 600px;
 }
@@ -79,6 +82,20 @@ a{
 section{
     text-align: center;
 }
+
+/* 위로 올라가는 애니메이션 */
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translate3d(0, 100%, 0);
+    }
+    to {
+        opacity: 1;
+        transform: translateZ(0);
+    }
+}
+
+
 
 /* 크기 조절 시 맞추기 */
 
